Participate in the event - done